--- a/src/main/resources/fr/insa/horodateurjava/views/admin/admin-login-view.fxml
+++ b/src/main/resources/fr/insa/horodateurjava/views/admin/admin-login-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #DBE4EE;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.insa.horodateurjava.adminControllers.AdminLoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #DBE4EE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.insa.horodateurjava.adminControllers.AdminLoginController">
     <top>
         <AnchorPane prefHeight="150.0" prefWidth="150.0" BorderPane.alignment="CENTER">
             <children>
@@ -31,7 +31,7 @@
    <left>
         <AnchorPane prefHeight="450.0" prefWidth="450.0" BorderPane.alignment="CENTER">
             <children>
-                <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#81a4cd" height="303.0" layoutX="250.0" layoutY="25.0" stroke="TRANSPARENT" strokeType="INSIDE" width="500.0">
+                <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#81a4cd" height="255.0" layoutX="250.0" layoutY="73.0" stroke="TRANSPARENT" strokeType="INSIDE" width="500.0">
                     <effect>
                         <DropShadow height="25.0" radius="12.0" width="25.0">
                             <color>
@@ -40,27 +40,24 @@
                         </DropShadow>
                     </effect>
                 </Rectangle>
-            <GridPane layoutX="286.0" layoutY="25.0" prefHeight="265.0" prefWidth="428.0">
+            <GridPane layoutX="286.0" layoutY="91.0" prefHeight="166.0" prefWidth="428.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="43.75" minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="43.75" minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="43.75" minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="56.25" minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="43.75" minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="43.75" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label />
-                  <Label style="-fx-text-fill: #FFFFFF;" text="Email" GridPane.rowIndex="1" />
-                  <Label style="-fx-text-fill: #FFFFFF;" text="Mot de passe" GridPane.rowIndex="3" />
-                  <PasswordField GridPane.rowIndex="4" fx:id="passwordField"/>
-                  <TextField GridPane.rowIndex="2" fx:id="emailField"/>
+                  <Label style="-fx-text-fill: #FFFFFF;" text="Email" />
+                  <Label style="-fx-text-fill: #FFFFFF;" text="Mot de passe" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="passwordField" GridPane.rowIndex="3" />
+                  <TextField fx:id="emailField" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Button layoutX="448.0" layoutY="290.0" mnemonicParsing="false" style="-fx-background-color: #F17300;" text="Se connecter" textFill="WHITE" fx:id="loginButton" onAction="#handleLogin" />
+            <Button fx:id="loginButton" layoutX="450.0" layoutY="269.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="40.0" prefWidth="102.0" style="-fx-background-color: #F17300;" text="Se connecter" textFill="WHITE" />
             </children>
         </AnchorPane>
    </left>
